--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -5,12 +5,16 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/select_imgbutton_select_picture"
         android:src="@android:drawable/ic_menu_camera"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"
+        android:padding="20dp"
+        android:scaleType="fitCenter"
+        android:tag="default" />
 
     <Switch
         android:layout_width="wrap_content"
